# termswx

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  design.md  termswx.py  test.py  test.sh  transfer.py
.github/workflows/: rust.yml
documentation/: ansi_escape_prompt.md  ansi_filter.uml  console.uml  keyinput.uml  local_events.uml  overview.uml  remote_events.uml  start.uml  tcpserver.uml  testfile.uml
src/: ansi_filter.rs  ansi_seq.rs  config.rs  console_service.rs  logger_service.rs  main.rs  network_service.rs  script_runner.rs  serial_service.rs  term_switch.rs
