[package]
name = "termswx"
version = "1.0.5"
edition = "2021"
authors = ["Steen Hegelund <steen@hegelund-hansen.dk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9.12", features = ["autocomplete"] }
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
crossterm = "0.27.0"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
serialport = "4.5.1"
sysinfo = "0.31.4"
